fixed bug#6603 - Plus ("+") button from Config Item Add does not work on Safari.

--- a/var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.Default.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.Default.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.10 $
+ * @version     $Revision: 1.11 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -60,12 +60,16 @@ ul.ITSMFlag div.Value .Flag {
  */
 
 label.SubElement {
-        margin-left: 10%;
-        margin-right: 10px;
+    width: 40% !important;
+    margin-right: 10px;
 }
 
 div.SubElement {
-    width:35%;
+    margin-left: 40% !important;
+}
+
+div.SubElement input.W50pc {
+    width: 33%;
 }
 
 /**
